--- a/fhevm-react-template/packages/hardhat/package.json
+++ b/fhevm-react-template/packages/hardhat/package.json
@@ -24,10 +24,12 @@
     "hardhat"
   ],
   "dependencies": {
-    "encrypted-types": "^0.0.4",
-    "@fhevm/solidity": "^0.9.1"
+    "@fhevm/solidity": "^0.9.1",
+    "dotenv": "^17.2.3",
+    "encrypted-types": "^0.0.4"
   },
   "devDependencies": {
+    "@fhevm/mock-utils": "0.3.0-1",
     "@fhevm/hardhat-plugin": "^0.3.0-1",
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
@@ -40,7 +42,7 @@
     "@types/node": "^20.19.8",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
-    "@zama-fhe/relayer-sdk": "^0.3.0-5",
+    "@zama-fhe/relayer-sdk": "0.3.0-5",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.1",
     "cross-env": "^7.0.3",
